Edit account names, completer uses expense and income account names

--- a/src/dexter/dex.toml
+++ b/src/dexter/dex.toml
@@ -1,8 +1,8 @@
 # Default configuration settings
 
 [terminology]
-credit = "credit"   # alts:  "from", "out", "destination"
-debit = "debit"     # alts:  "to", "in", "source"
+cname = "credit"   # alts:  "from", "out", "destination"
+dname = "debit"    # alts:  "to", "in", "source"
 
 [csv]
 
