Add description of budget process to docs

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,10 +8,16 @@ extra:
 
 extra_css:
   - css/dex.css
-  
+
+markdown_extensions:
+  - admonition
+
 plugins:
   - search
+  - callouts
   - mkdocstrings
+  - codeinclude:
+      title_mode: none
 
 nav:
   - "Home":
