More new API commands, implement config command

--- a/src/dexter/dex.toml
+++ b/src/dexter/dex.toml
@@ -1,8 +1,8 @@
 # Default configuration settings
 
 [terminology]
-cname = "credit"   # alts:  "from", "out", "destination"
-dname = "debit"    # alts:  "to", "in", "source"
+cname = "credit"   # alts:  "from", "out", "source"
+dname = "debit"    # alts:  "to", "in", "destination"
 
 [csv]
 
