--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,6 @@
 site_name: Dexter
+repo_url:  https://github.com/conery/dexter
+copyright: Copyright &copy 2025 John Conery
 
 theme:
   name: "readthedocs"
@@ -28,17 +30,30 @@ nav:
     - "Philosophy": philosophy.md
     - "Workflow": workflow.md
   - "Running the Scripts":
-    - "Shell Command": dex.md
+    - "Command Line Application": dex.md
+    - "Installation": dex_install.md
+    - "Command Line Options": dex_options.md
+    - "Initialize a Database": dex_init.md
+    - "Configuration": dex_config.md
+    - "Importing CSV Files": dex_import.md
+    - "Pairing": dex_pair.md
+    - "Review Unpaired Postings": dex_review.md
+    - "Adding New Transaction": dex_add.md
+    - "Selecting Transactions": dex_select.md
+    - "Reports": dex_report.md
+    - "Backing Up Data": dex_save_restore.md
   - "The Budget Model":
-    - "Envelope Budgeting with Dexter": dexenvelopes.md
+    - "Envelope Budgeting with Dexter": envelopes_dex.md
     - "Account Balances": balances.md
-    - "Budget Transactions": budgettrans.md
-    - "Expense Account Balances": expbal.md
-    - "Income Account Balances": incbal.md
+    - "Budget Transactions": budget_trans.md
+    - "Expense Account Balances": balance_expenses.md
+    - "Income Account Balances": balance_income.md
     - "Adjustments": adjustments.md
     - "Using the Equity Account": equity.md
     - "Nominal Accounts": nominal.md
     - "Recap": recap.md
+  - "Dexter and hledger": 
+    - "Notes for hledger Users": hledger.md
   - "API":
     - "Database API": api.md
   - "Reference":
