--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -35,13 +35,13 @@ nav:
     - "Command Line Options": dex_options.md
     - "Configuration": dex_config.md
     - "Initialize a Database": dex_init.md
-    - "Importing CSV Files": dex_import.md
-    - "Pairing": dex_pair.md
-    - "Review Unpaired Postings": dex_review.md
-    - "Adding New Transaction": dex_add.md
-    - "Selecting Transactions": dex_select.md
+    - "Import CSV Files": dex_import.md
+    - "Pair Transactions": dex_pair.md
+    - "Review Unpaired Transactions": dex_review.md
+    - "Add New Transaction": dex_add.md
+    - "Select Transactions": dex_select.md
     - "Reports": dex_report.md
-    - "Backing Up Data": dex_save_restore.md
+    - "Back Up the Database": dex_save_restore.md
   - "The Budget Model":
     - "Envelope Budgeting with Dexter": envelopes_dex.md
     - "Account Balances": balances.md
