--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -29,12 +29,14 @@ nav:
     - "Envelope Budgeting":  envelopes.md
     - "Philosophy": philosophy.md
     - "Workflow": workflow.md
-  - "Running the Scripts":
+  - "Installation":
+    - "Dexter": dex_install.md
+    - "Database Server": db_server.md
+  - "Tutorial":
+    - "Example Data": folder.md
     - "Shell Command": dex.md
-    - "Installation": dex_install.md
-    - "Command Line Options": dex_options.md
-    - "Configuration": dex_config.md
-    - "Initialize a Database": dex_init.md
+    - "Defining Accounts": accounts.md
+    - "Initialize the Database": tut_init.md
     - "Import CSV Files": dex_import.md
     - "Pair Transactions": dex_pair.md
     - "Review Unpaired Transactions": dex_review.md
@@ -42,6 +44,10 @@ nav:
     - "Select Transactions": dex_select.md
     - "Reports": dex_report.md
     - "Back Up the Database": dex_save_restore.md
+  - "User Documentation":
+    - "Configuration": dex_config.md
+    - "Command Line Options": dex_options.md
+    - "dex init": dex_init.md
   - "The Budget Model":
     - "Envelope Budgeting with Dexter": envelopes_dex.md
     - "Account Balances": balances.md
