--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -37,6 +37,7 @@ nav:
     - "Shell Command": dex.md
     - "Defining Accounts": accounts.md
     - "Initialize the Database": tut_init.md
+    - "Import Regular Expressions": tut_regexp.md
     - "Import CSV Files": dex_import.md
     - "Pair Transactions": dex_pair.md
     - "Review Unpaired Transactions": dex_review.md
@@ -45,8 +46,10 @@ nav:
     - "Reports": dex_report.md
     - "Back Up the Database": dex_save_restore.md
   - "User Documentation":
-    - "Configuration": dex_config.md
-    - "Command Line Options": dex_options.md
+    - "Configuration": config.md
+    - "Command Line Options": options.md
+    - "Regular Expressions": regexp.md
+    - "dex import": dex_import.md
     - "dex init": dex_init.md
   - "The Budget Model":
     - "Envelope Budgeting with Dexter": envelopes_dex.md
