--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -37,9 +37,9 @@ nav:
     - "Shell Command": dex.md
     - "Defining Accounts": accounts.md
     - "Initialize the Database": tut_init.md
+    - "Import CSV Files": tut_import.md
     - "Import Regular Expressions": tut_regexp.md
-    - "Import CSV Files": dex_import.md
-    - "Pair Transactions": dex_pair.md
+    - "Pair Transactions": tut_pair.md
     - "Review Unpaired Transactions": dex_review.md
     - "Add New Transaction": dex_add.md
     - "Select Transactions": dex_select.md
@@ -51,6 +51,7 @@ nav:
     - "Regular Expressions": regexp.md
     - "dex import": dex_import.md
     - "dex init": dex_init.md
+    - "dex pair": dex_pair.md
   - "The Budget Model":
     - "Envelope Budgeting with Dexter": envelopes_dex.md
     - "Account Balances": balances.md
