--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -40,9 +40,9 @@ nav:
     - "Import CSV Files": tut_import.md
     - "Import Regular Expressions": tut_regexp.md
     - "Pair Transactions": tut_pair.md
+    - "Select Transactions": tut_select.md
     - "Review Unpaired Transactions": dex_review.md
     - "Add New Transaction": dex_add.md
-    - "Select Transactions": dex_select.md
     - "Reports": dex_report.md
     - "Back Up the Database": dex_save_restore.md
   - "User Documentation":
@@ -52,6 +52,7 @@ nav:
     - "dex import": dex_import.md
     - "dex init": dex_init.md
     - "dex pair": dex_pair.md
+    - "dex select": dex_select.md
   - "The Budget Model":
     - "Envelope Budgeting with Dexter": envelopes_dex.md
     - "Account Balances": balances.md
