--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -39,9 +39,9 @@ nav:
     - "Initialize the Database": tut_init.md
     - "Import CSV Files": tut_import.md
     - "Import Regular Expressions": tut_regexp.md
-    - "Pair Transactions": tut_pair.md
+    - "Pair Entries": tut_pair.md
     # - "Select Transactions": tut_select.md
-    - "Review Unpaired Transactions": dex_review.md
+    - "Review Unpaired Entries": tut_review.md
     - "Add New Transaction": dex_add.md
     - "Reports": dex_report.md
     - "Back Up the Database": dex_save_restore.md
@@ -52,6 +52,7 @@ nav:
     - "dex import": dex_import.md
     - "dex init": dex_init.md
     - "dex pair": dex_pair.md
+    - "dex review": dex_review.md
     - "dex select": dex_select.md
   - "The Budget Model":
     - "Envelope Budgeting with Dexter": envelopes_dex.md
