--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -44,6 +44,7 @@ nav:
     - "Review Unpaired Entries": tut_review.md
     - "Select Transactions": tut_select.md
     - "Print Reports": tut_report.md
+    - "Fill Envelopes": tut_fill.md
   - "User Documentation":
     - "Configuration": config.md
     - "Command Line Options": options.md
