Outline of new fill command, misc updates

--- a/src/dexter/dex.toml
+++ b/src/dexter/dex.toml
@@ -2,7 +2,20 @@
 
 [database]
 name = "finances"
-start_date = "2025-01-01"
+start_date = 2025-01-01     # note: no quotes around date!
+
+# [budget]
+# income = [
+#     { source = "income:yoyodyne", account = "checking" },
+#     { source = "interest", account = "checking" },
+# ]
+# allocation = [
+#     { category = "expenses:food", amount = 500 },
+#     { category = "expenses:home", amount = 2550 },
+#     { category = "expenses:car", amount = 1000 },
+#     { category = "equity", amount = 500 },
+# ]
+# remainder = 'expenses:travel'
 
 [csv]
 
