Add dependences to pyproject.toml, refactor modal dialog result structures.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "textual",
     "pygtrie",
     "pypdf",
+    "thefuzz",
 ]
 authors = [
   { name = "John Conery", email = "jconery@icloud.com" },
